cameraResolution = CameraConfigurationUtils.findBestPreviewSizeValue(parameters, newPoint);

// Log.i(TAG, "Camera resolution: " + cameraResolution);
// bestPreviewSize = CameraConfigurationUtils.findBestPreviewSizeValue(parameters, screenResolution);
bestPreviewSize = CameraConfigurationUtils.findBestPreviewSizeValue(parameters, newPoint);
Log.i(TAG, "Best available preview size: " + bestPreviewSize);
// <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

/**
     * 交换 x 和 y 的值，解决竖屏扫码预览时图像拉伸
     *
     * @param point 原 point 对象
     * @return 无返回值，直接在原 point 对象内存地址里面修改
     */
    private Point repairVerticalPreviewStretch(Point point) {
        if (point == null) {
            return null;
        }
        int a = point.x;
        int b = point.y;
        if (a < b) {
            // 交换大小
            a = a + b;
            b = a - b;
            a = a - b;
        }
        return new Point(a, b);
    }


4、(设置竖屏后)，如何修复近距离无法识别二维码？
A: 修改 CameraManager.buildLuminanceSource(...) 方法：
return new PlanarYUVLuminanceSource(data, width, height, 0, 0, width, height, false);


5、如何修复无法识别条形码？
A: 修改 DecodeHandler.decode() 方法，如果是竖屏模式则旋转图像。
if (PreviewUtil.isOrientationPortrait(activity)) {
            //竖屏模式，旋转图像
            byte[] rotatedData = new byte[data.length];
            for (int y = 0; y < height; y++) {
                for (int x = 0; x < width; x++) {
                    rotatedData[x * height + height - y - 1] = data[x + y * width];
                }
            }
            int tmp = width;
            width = height;
            height = tmp;
            data = rotatedData;
        }

6、如何修正预览框宽高？
A: 修改 CameraManager.getFramingRectInPreview() 方法：
PreviewUtil.getFramingRectInPreview()

7、修复 PDF_417、DataMatrix 条码解析中文乱码问题？
A: // 针对 PDF_417/DATA_MATRIX，重新 new String() 解决乱码问题
TextResultHandler.getDisplayContents()
PreviewUtil.reDecodeText(oldText)


